k8s/env-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-test-deployment
  namespace: env-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-test-app
  template:
    metadata:
      labels:
        app: env-test-app
    spec:
      containers:
        - name: env-test-app
          image: env-test:nginx-temlate2 #replace with the image that you build
          ports:
            - containerPort: 80
