k8s/env-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-test-service
  namespace: env-test
spec:
  selector:
    app: env-test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
