k8s/env-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: env-test # Set the namespace to "store"
spec:
  rules:
    # - host:
    - http:
        paths:
          - path: /env-test(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: env-test-service
                port:
                  number: 80
